--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Marc Sch&auml;fer Resume</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -136,7 +137,7 @@
 				</div>
 				
 				<div class="company-logo">
-					<img src="assets/logos/edeka.jpg" width="50px">
+					<img src="assets/logos/edeka.jpg" width="50px" on="alert('helloworld');">
 				</div>
 				
 				<div class="info-company">
@@ -199,6 +200,20 @@
 					<img src="assets/icons/spanish.png" class="language-icon">
 					<p>Spanish: elementary</p>
 				</div>
+			</div>
+			<div class="tech-skills">
+				<h2>Technical skills</h2>
+				<ul>
+					<li>HTML 5</li>
+					<li>CSS 3</li>
+					<li>Jekyll</li>
+					<li>Git</li>
+				</ul>
+				<h2>Design skills</h2>
+				<ul>
+					<li>Adobe Illustrator</li>
+					<li>Adobe Photoshop</li>
+				</ul>
 			</div>
 		</div>
 	</div>
